# arxivparse

./: .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: python-publish.yml
arxivparse/: __init__.py  cli.py  convert.py  download.py  errors.py  extract_text.py  pipeline.py
arxivparser/: __init__.py  convert.py  tex.py
tests/: conftest.py  test_convert.py  test_download.py  test_errors.py  test_extract_text.py  test_init_api.py  test_pipeline.py  test_tex.py
