[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arxivparser"
version = "0.1.0"
description = "Convert arXiv papers to plain text using LaTeXML"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "jsonargparse>=4.48.0",
    "requests>=2.31",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.scripts]
arxivparser = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["arxivparser"]
