[build-system]
requires = ["uv_build>=0.6.0,<0.7.0"]
build-backend = "uv_build"

[project]
name = "arxivparser"
version = "0.1.0"
description = "Convert arXiv papers to plain text using LaTeXML"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Ren Fu", email = "flr25@mails.tsinghua.edu.cn"},
]
keywords = ["arxiv", "latex", "latexml", "text-extraction", "nlp", "ml"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Markup :: LaTeX",
]
dependencies = [
    "jsonargparse>=4.48.0",
    "requests>=2.31",
]

[project.urls]
Homepage = "https://github.com/jason-fu/arxivparser"
Repository = "https://github.com/jason-fu/arxivparser"
Issues = "https://github.com/jason-fu/arxivparser/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.scripts]
arxivparser = "arxivparser.cli:main"

[tool.uv.build-backend]
module-root = ""
