[build-system]
requires = ["uv_build>=0.6.0,<0.7.0"]
build-backend = "uv_build"

[project]
name = "arxivparse"
version = "0.1.2"
description = "Convert arXiv papers to plain text using LTeXML"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Ren Fu", email = "flr25@mails.tsinghua.edu.cn" }]
keywords = ["arxiv", "latex", "latexml", "text-extraction", "nlp", "ml"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Text Processing :: Markup :: LaTeX",
]
dependencies = ["jsonargparse>=4.48.0", "requests>=2.31"]

[project.urls]
Homepage = "https://github.com/flrjrf/arxivparse"
Repository = "https://github.com/flrjrf/arxivparse"
Issues = "https://github.com/flrjrf/arxivparse/issues"

[dependency-groups]
dev = ["pytest>=8.0"]

[project.scripts]
arxivparse = "arxivparse.cli:main"

[tool.uv.build-backend]
module-root = ""
